--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-fetch": "^3.3.2",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "ssl-checker": "^2.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
